--- a/styles/less/form.less
+++ b/styles/less/form.less
@@ -77,24 +77,24 @@ form > form-group > input {
 }
 
 .btn-outline-dark {
-	color: white;
+	color: @white;
 }
 
 .btn-login {
-	background-color: white;
+	background-color: @white;
 	color: @grey;
 	border-color: @grey;
 }
 .btn-login:hover {
-	background-color: white;
-	border-color: white;
+	background-color: @white;
+	border-color: @white;
 	color: @grey;
 }
 
 .btn-signup {
 	background-color: @blue;
 	border-color: @blue;
-	color: white;
+	color: @white;
 }
 .btn-signup:hover {
 	background-color: @purple;
@@ -104,7 +104,7 @@ form > form-group > input {
 .btn-login2 {
 	background-color: @blue;
 	border-color: @blue;
-	color: white;
+	color: @white;
 }
 .btn-login2:hover {
 	background-color: @purple;
@@ -112,13 +112,13 @@ form > form-group > input {
 }
 
 .btn-signup2 {
-	background-color: white;
+	background-color: @white;
 	color: @grey;
 	border-color: @grey;
 }
 
 .btn-signup2:hover {
-	background-color: white;
-	border-color: white;
+	background-color: @white;
+	border-color: @white;
 	color: @grey;
 }
