--- a/styles/less/layout.less
+++ b/styles/less/layout.less
@@ -62,6 +62,9 @@ body,
 	background-color: @bg-blue;
 }
 
+.prerequesites {
+	background-color: @bg-blue;
+}
 .get-started > .col-md-4 {
 	top: 70%;
 	left: 12%;
@@ -161,7 +164,7 @@ footer img {
 	.course-header {
 		width: 100vw;
 		height: 70vh;
-		background-color: #7295d9;
+		background-color: @blue;
 		padding: 1rem;
 		background-repeat: no-repeat;
 		background-size: cover;
