--- a/styles/less/navbar.less
+++ b/styles/less/navbar.less
@@ -14,7 +14,7 @@ img.logo {
 .nav-tabs .nav-item.show .nav-link,
 .nav-tabs .nav-link.active {
 	color: @grey;
-	background-color: #fff;
+	background-color: @white;
 	border-color: @purple;
 	border-bottom: 6px solid @purple;
 }
