--- a/styless/css/main.css
+++ b/styless/css/main.css
@@ -1,4 +1,4 @@
-@font-face {
+/* @font-face {
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 100;
@@ -439,7 +439,7 @@ form > form-group > input {
   width: 33.33%;
   padding: 5px;
 }
-/* Clear floats after image containers */
+ Clear floats after image containers
 .row::after {
   content: '';
   clear: both;
@@ -562,4 +562,4 @@ form > form-group > input {
   .container {
     width: 90%;
   }
-}
+} */
