--- a/styles/less/components.less
+++ b/styles/less/components.less
@@ -65,7 +65,29 @@
 	color: @white;
 }
 
-// Form fields
+iframe.embed-responsive-item {
+	margin-left: 2rem;
+	margin-right: 2rem;
+	width: 96%;
+}
+
+.embed-responsive .embed-responsive-item,
+.embed-responsive embed,
+.embed-responsive iframe,
+.embed-responsive object,
+.embed-responsive video {
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	width: 93%;
+	height: 97%;
+	border: 0;
+}
+
+.video-content {
+	padding-top: 4rem;
+}
 
 // Cards
 .card {
@@ -107,5 +129,22 @@
 			font-size: 16px;
 			line-height: 22px;
 		}
+	}
+
+	.embed-responsive .embed-responsive-item,
+	.embed-responsive embed,
+	.embed-responsive iframe,
+	.embed-responsive object,
+	.embed-responsive video {
+		left: 12px;
+	}
+
+	iframe.embed-responsive-item {
+		margin-left: auto !important
+		;
+	}
+
+	.video-content {
+		padding-top: 1rem;
 	}
 }
