--- a/styless/css/main.css
+++ b/styless/css/main.css
@@ -1,4 +1,4 @@
-/* @font-face {
+@font-face {
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 100;
@@ -562,4 +562,4 @@ form > form-group > input {
   .container {
     width: 90%;
   }
-} */
+}
